AUX_SOURCE_DIRECTORY(src/ HELLOLIB_FILES)
ADD_LIBRARY(hellolib SHARED ${HELLOLIB_FILES})
SET_TARGET_PROPERTIES(
        hellolib
    PROPERTIES
        SOVERSION ${${PROJECT_NAME}_SOVERSION}
        VERSION ${${PROJECT_NAME}_VERSION})
INSTALL(TARGETS hellolib LIBRARY DESTINATION lib${LIB_SUFFIX})

SET(HELLO_NEEDED_LIBS hellolib)

ADD_EXECUTABLE(hello app/hello.cpp)
TARGET_LINK_LIBRARIES(hello ${HELLO_NEEDED_LIBS})
# INSTALL(TARGETS hello DESTINATION bin)

ADD_EXECUTABLE(class_method app/class_method.cpp)
TARGET_LINK_LIBRARIES(class_method ${HELLO_NEEDED_LIBS})

ADD_EXECUTABLE(move app/move.cpp)
ADD_EXECUTABLE(move_assignment app/move_assignment.cpp)

#SET(CMAKE_C_FLAGS             "${CMAKE_C_FLAGS}   -fopenmp")
#SET(CMAKE_CXX_FLAGS           "${CMAKE_CXX_FLAGS} -fopenmp")


IF (CPPUNIT_FOUND)

    ADD_EXECUTABLE(hello_test test/hello_test.cpp)
    TARGET_LINK_LIBRARIES(hello_test ${HELLO_NEEDED_LIBS} ${CPPUNIT_LIBRARIES})
    ADD_TEST(hello_test ${EXECUTABLE_OUTPUT_PATH}/hello_test)

ENDIF (CPPUNIT_FOUND)
