#AUX_SOURCE_DIRECTORY(src/ HELLOLIB_FILES)
#ADD_LIBRARY(hellolib SHARED ${HELLOLIB_FILES})
#SET_TARGET_PROPERTIES(
#        hellolib
#    PROPERTIES
#        SOVERSION ${${PROJECT_NAME}_SOVERSION}
#        VERSION ${${PROJECT_NAME}_VERSION})
#INSTALL(TARGETS hellolib LIBRARY DESTINATION lib${LIB_SUFFIX})

#SET(HELLO_NEEDED_LIBS hellolib)

ADD_EXECUTABLE(leet app/leet.cpp)
ADD_EXECUTABLE(reverse_integer app/reverse_integer.cpp)
