AUX_SOURCE_DIRECTORY(src/ LEETCODELIB_FILES)
ADD_LIBRARY(leetcodelib SHARED ${LEETCODELIB_FILES})
SET_TARGET_PROPERTIES(
        leetcodelib
    PROPERTIES
        SOVERSION ${${PROJECT_NAME}_SOVERSION}
        VERSION ${${PROJECT_NAME}_VERSION})
INSTALL(TARGETS leetcodelib LIBRARY DESTINATION lib${LIB_SUFFIX})

ADD_SUBDIRECTORY(app)
