AUX_SOURCE_DIRECTORY(src/ UTILSLIB_FILES)
ADD_LIBRARY(utilslib SHARED ${UTILSLIB_FILES})
SET_TARGET_PROPERTIES(
        utilslib
    PROPERTIES
        SOVERSION ${${PROJECT_NAME}_SOVERSION}
        VERSION ${${PROJECT_NAME}_VERSION})
INSTALL(TARGETS utilslib LIBRARY DESTINATION lib${LIB_SUFFIX})

SET(UTILS_NEEDED_LIBS utilslib)

ADD_SUBDIRECTORY(app)
